<resources>
    <string name="app_name">Terrestrial</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="Signup_text">"Don't have an account ? "</string>
    <string name="Signup_button">Sign Up now</string>
    <string name="name">Name</string>
    <string name="signup">Create My Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_upload_course">Upload</string>
    <string name="title_setting">Setting</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_login">Login</string>
    <string name="dialog_title_success">Yeah!</string>
    <string name="dialog_message_success">Your account is created. \nhappy to learn:)</string>
    <string name="dialog_button_next">Next</string>
    <string name="hore">Hooray!! You are %s</string>
    <string name="rekomendasi_result">We have class recommendations for you</string>
    <string name="Next">Next</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="language">Language</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="searchbar_hint">Search</string>
    <string name="tag_line">what do you want to learn today?</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="title_Detail_kursus">Course Details</string>
    <string name="title_kursus_name">Course Title</string>
    <string name="Description_class">Class Description</string>
    <string name="kursus_kelas">Course Class</string>
    <string name="Rekomendasi_kelas">Class Course Recommendations</string>
    <string name="login_button">Log in</string>
    <string name="login_text">Already have an account?</string>
    <string name="create_account_succes">Account successfully created</string>
    <string name="create_account_failed">Account failed to create</string>
    <string name="Belajar">Learn</string>
    <string name="pic_kursus">course picture</string>
    <string name="login_succes">Login Succes</string>
    <string name="login_failed">Incorrect email/password</string>
    <string name="not_empty_form">Form cannot be empty</string>
    <string name="valid_email">invalid email</string>
    <string name="image_description">Image</string>
    <string name="coming_soon">Oops,,\nthe feature is still a work in progress, I am still coding\nhuftt....</string>
    <string name="question">Recommendation question</string>
    <string name="submit">Submit</string>
    <string name="null_data">Failed to load</string>
    <string name="error">Error</string>
    <string name="title_question">Question Career recommendations</string>
    <string name="coming">Coming Soon</string>
</resources>