<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/navy"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/photo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="12dp"
                    android:contentDescription="@string/profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@tools:sample/full_names" />

                <TextView
                    android:id="@+id/tv_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name"
                    tools:text="@string/tag_line"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvRecommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rekomendasi_kelas"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/profile"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/commingSoonRecommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="42dp"
            android:text="@string/coming"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRecommend"/>

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/rvRecommend"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8dp"-->
<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tvRecommend"-->
<!--            tools:listitem="@layout/item_recommendation" />-->

        <TextView
            android:id="@+id/tvCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kursus_kelas"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/commingSoonRecommend"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCourse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCourse"
            tools:listitem="@layout/item_course" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

