<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvListUser"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:padding="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/iv_item_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription"
                tools:srcCompat="@color/orange" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="203dp"
            android:layout_height="79dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_iv"
            tools:ignore="MissingConstraints,RelativeOverlap">

            <TextView
                android:id="@+id/tv_title_kursus"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:text="@string/title_kursus_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:autoLink="web"
                android:text="@string/Description_class"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/free_card"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:src="@drawable/free" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/Belajar"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
